--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -1,7 +1,12 @@
 
 以时钟中断为例
 
-一个操作系统要跑起来，必须有Time Tick，它就像是身体的脉搏。普通情况下，OS Time Tick由PIT(i8254)或APIC Timer设备提供—PIT定期(1ms in Linux)产生一个timer interrupt，作为global tick, APIC Timer产生一个local tick。在虚拟化情况下，必须为guest OS模拟一个PIT和APIC Timer。
+一个操作系统要跑起来，必须有**Time Tick**，它就像是身体的脉搏。普通情况下，OS Time Tick由**PIT**(i8254)或**APIC Timer**设备提供 — 
+
+- PIT定期(**1ms in Linux**)产生一个**timer interrupt**，作为**global tick**, 
+- **APIC Timer**产生一个**local tick**。
+
+在虚拟化情况下，必须为**guest OS**模拟一个**PIT**和**APIC Timer**。
 
 模拟的PIT和APIC Timer不能像真正硬件那样物理计时，所以一般用HOST的某种系统服务或软件计时器来为这个模拟PIT提供模拟”时钟源”。
 
