--- Auto-Git Commit ---

--- a/Architecture/x86/4. x86中断与异常.md
+++ b/Architecture/x86/4. x86中断与异常.md
@@ -48,7 +48,7 @@ LAPIC接受到中断消息后，提取其中的VECTOR并设置IRR后，进行中
 
 ## 1.3. MSI
 
-后来又出来的MSI中断，设备直接如果支持MSI的话，直接构造出MSI消息，MSI有个字段Address标明了中断目标地址，然后设备直接发送中断给LAPIC提交CPU，这种方式下，直接绕过了IOAPIC，效率更高。
+后来又出来的MSI中断，设备直接如果支持MSI的话，直接构造出MSI消息，MSI有个字段**Address**标明了**中断目标地址**，然后**设备直接发送中断给LAPIC**提交CPU，这种方式下，直接**绕过了IOAPIC**，效率更高。
 
 ## 1.4. 中断触发方式
 
