--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -1,7 +1,7 @@
 
 以时钟中断为例
 
-一个操作系统要跑起来，必须有**Time Tick**，它就像是身体的脉搏。普通情况下，OS Time Tick由**PIT**(i8254)或**APIC Timer**设备提供 — 
+一个操作系统要跑起来，必须有**Time Tick**，它就像是身体的脉搏。普通情况下，OS Time Tick由**PIT**(i8254)或**APIC Timer**设备提供
 
 - PIT定期(**1ms in Linux**)产生一个**timer interrupt**，作为**global tick**, 
 - **APIC Timer**产生一个**local tick**。
@@ -12,10 +12,15 @@
 
 目前两种方案：1. **用户态模拟方案**（QEMU）； 2. **内核态模拟方案**（KVM）；
 
-在**QEMU**中，用**SIGALARM信号**来实现：QEMU利用**某种机制**，使**timer interrupt handler**会向**QEMU process**发送一个**SIGALARM信号**，处理该信号过程中再**模拟PIT**中**产生一次时钟**。QEMU再通过某种机制，将此模拟PIT发出的模拟中断交付给kvm，再由kvm注入到虚拟机中去。
+在**QEMU**中，用**SIGALARM信号**来实现：QEMU利用**某种机制**，使**timer interrupt handler**会向**QEMU process**发送一个**SIGALARM信号**，处理该信号过程中再**模拟PIT**中**产生一次时钟**。QEMU再通过某种机制，将**此模拟PIT**发出的**模拟中断交付给kvm**，再由kvm**注入**到虚拟机中去。
 
-目前的kvm版本支持内核PIT、APIC和内核PIC，因为这两个设备是频繁使用的，在内核模式中模拟比在用户模式模拟性能更高。这里重点是讲内核PIT的模拟实现，弄清楚它是如何为guest OS提供时钟的。
+目前的kvm版本支持内核PIT、APIC和内核PIC，因为这两个设备是**频繁使用**的，在**内核模式中模拟**比在**用户模式模拟**性能更高。
 
+这里重点是讲内核PIT的模拟实现，弄清楚它是如何为guest OS提供时钟的。
+
+# 相关代码
+
+![2020-05-04-13-06-31.png](./images/2020-05-04-13-06-31.png)
 
 # 物理芯片介绍
 
