--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -1,10 +1,14 @@
 
-# 时钟中断
+# Time Tick
 
-一个操作系统要跑起来，必须有**Time Tick**，它就像是身体的脉搏。普通情况下，OS Time Tick由**PIT**(i8254)或**APIC Timer**设备提供
+一个操作系统要跑起来，必须有**Time Tick**，它就像是身体的脉搏。
+
+普通情况下，OS Time Tick由**PIT**(i8254)或**APIC Timer**设备提供
 
 - PIT定期(**1ms in Linux**)产生一个**timer interrupt**，作为**global tick**, 
 - **APIC Timer**产生一个**local tick**。
+
+## 
 
 在虚拟化情况下，必须为**guest OS**模拟一个**PIT**和**APIC Timer**。
 
