--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -8,7 +8,7 @@
 - PIT定期(**1ms in Linux**)产生一个**timer interrupt**，作为**global tick**, 
 - **APIC Timer**产生一个**local tick**。
 
-## 
+## 虚拟化下的timer
 
 在虚拟化情况下，必须为**guest OS**模拟一个**PIT**和**APIC Timer**。
 
