--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -66,12 +66,7 @@ PIC有三个重要的寄存器:
 
 # QEMU
 
-PIC创建:
 
-```cpp
-// kvm-all.c/kvm_init/kvm_irqchip_create
-kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP)
-```
 
 PIT创建:
 
@@ -81,6 +76,13 @@ kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT)
 ```
 
 # PIC(8259)的创建
+
+## QEMU
+
+```cpp
+// kvm-all.c/kvm_init/kvm_irqchip_create
+kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP)
+```
 
 ## 整体流程
 
