--- a/Virtualization/QEMU/2. 初始化-创建虚拟机.md/2. QEMU初始化.md
+++ b/Virtualization/QEMU/2. 初始化-创建虚拟机.md/2. QEMU初始化.md
@@ -78,7 +78,7 @@ int main()
  |       |   ├─ e820_add_entry(identity_base, 0x4000, E820_RESERVED);        // 
  |       ├─ kvm_irqchip_create()             // 创建中断管理
  |       |   ├─ kvm_check_extension(s, KVM_CAP_IRQCHIP)        // 检查irqchip功能
- |       |   ├─ kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP);        // 与kvm交互, 架构相关特性检查
+ |       |   ├─ kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP);        // 与kvm交互, 创建IRQ芯片, 即8259A
  |       └─ memory_listener_register(&kvm_memory_listener) // 注册 kvm_memory_listener
  |
  ├─ qemu_init_cpu_loop()                     // 初始化 vCPU 线程竞争的锁
