--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -66,12 +66,11 @@ PIC有三个重要的寄存器:
 
 # QEMU
 
-
-
 PIT创建:
 
 ```cpp
 // i8254.c
+kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT2, &config);
 kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT)
 ```
 
