--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -90,6 +90,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  ├─  kvm_arch_vm_ioctl()     
  |   ├─ irqchip_in_kernel(kvm)  // 如果irqchip在kvm中实现, 则直接返回, 不执行任何动作
  |   ├─ kvm_pic_init()   // pic创建, 8259
+ |   |   |─ kzalloc(sizeof(struct kvm_pic), GFP_KERNEL_ACCOUNT);   // 创建kvm_pic结构
  |   ├─ kvm_ioapic_init()   // ept violation异常的处理
  |   ├─ kvm_setup_default_irq_routing()   // ept violation异常的处理
  |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // ept violation异常的处理
