--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -93,7 +93,9 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   |─ kzalloc(sizeof(struct kvm_pic), GFP_KERNEL_ACCOUNT);   // 创建kvm_pic结构
  |   ├─ kvm_ioapic_init()   // ept violation异常的处理
  |   ├─ kvm_setup_default_irq_routing()   // ept violation异常的处理
- |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // ept violation异常的处理
+ |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // irqchip为kernel模式, 即在kernel中实现
+
+
  |   |   |─ exit_qualification = vmcs_readl(EXIT_QUALIFICATION);   // 读取exit_qualification字段
  |   |   |─ gpa = vmcs_read64(GUEST_PHYSICAL_ADDRESS);   // 读取虚拟机的物理地址
  |   |   |─ error_code = XXXX;   // 拼凑error
