--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -91,9 +91,9 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   ├─ irqchip_in_kernel(kvm)  // 如果irqchip在kvm中实现, 则直接返回, 不执行任何动作
  |   ├─ kvm_pic_init()   // pic创建, 8259
  |   |   |─ kzalloc(sizeof(struct kvm_pic), GFP_KERNEL_ACCOUNT);   // 创建kvm_pic结构
- |   |   |─ kvm_iodevice_init(&s->dev_master, &picdev_master_ops); //
- |   |   |─ kvm_iodevice_init(&s->dev_slave, &picdev_slave_ops);
- |   |   |─ kvm_iodevice_init(&s->dev_eclr, &picdev_eclr_ops);
+ |   |   |─ kvm_iodevice_init(&s->dev_master, &picdev_master_ops); // 注册master的IO端口读写函数
+ |   |   |─ kvm_iodevice_init(&s->dev_slave, &picdev_slave_ops); // 注册slave的IO端口读写函数
+ |   |   |─ kvm_iodevice_init(&s->dev_eclr, &picdev_eclr_ops); // 注册eclr的IO端口读写函数
  |   ├─ kvm_ioapic_init()   // ept violation异常的处理
  |   ├─ kvm_setup_default_irq_routing()   // ept violation异常的处理
  |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // irqchip为kernel模式, 即在kernel中实现
