--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -74,7 +74,7 @@ kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT2, &config);
 kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT)
 ```
 
-# PIC(8259)的创建
+# PIC的创建
 
 ## QEMU
 
@@ -98,7 +98,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   |─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0xa0, 2, &s->dev_slave); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
  |   |   |─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0x4d0, 2, &s->dev_eclr); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
  |   |   └─ kvm->arch.vpic = s;   // 将s赋值给kvm->arch.vpic
- |   ├─ kvm_ioapic_init()   // ept violation异常的处理
+ |   ├─ kvm_ioapic_init()   // ioapic的初始化
  |   ├─ kvm_setup_default_irq_routing()   // ept violation异常的处理
  |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // irqchip为kernel模式, 即在kernel中实现
 
@@ -133,9 +133,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
 ```
 
-## 代码分析
-
-代码入口在
+## 入口代码
 
 ```cpp
         case KVM_CREATE_IRQCHIP: {
@@ -149,11 +147,11 @@ kvm_vm_ioctl()  // vm ioctl的入口
                 r = -EINVAL;
                 if (kvm->created_vcpus)
                         goto create_irqchip_unlock;
-                // 主要过程, 是8259
+                // 主要过程, 是8259A pic初始化
                 r = kvm_pic_init(kvm);
                 if (r)
                         goto create_irqchip_unlock;
-                // ioapic
+                // ioapic的初始化
                 r = kvm_ioapic_init(kvm);
                 if (r) {
                         kvm_pic_destroy(kvm);
