--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -173,6 +173,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
         }
 ```
 
+## kvm_pic_init(): pic(8259A)的初始化
 
 ```cpp
 // arch/x86/kvm/i8259.c
@@ -195,10 +196,12 @@ int kvm_pic_init(struct kvm *kvm)
         /*
          * Initialize PIO device
          */
+        // 注册master的IO端口读写函数
         kvm_iodevice_init(&s->dev_master, &picdev_master_ops);
         kvm_iodevice_init(&s->dev_slave, &picdev_slave_ops);
         kvm_iodevice_init(&s->dev_eclr, &picdev_eclr_ops);
         mutex_lock(&kvm->slots_lock);
+        // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
         ret = kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0x20, 2,
                                       &s->dev_master);
         if (ret < 0)
@@ -230,5 +233,51 @@ fail_unlock:
         kfree(s);
 
         return ret;
+}
+```
+
+### kvm_io_bus_register_dev(): 
+
+```cpp
+int kvm_io_bus_register_dev(struct kvm *kvm, enum kvm_bus bus_idx, gpa_t addr,
+                            int len, struct kvm_io_device *dev)
+{
+        int i;
+        struct kvm_io_bus *new_bus, *bus;
+        struct kvm_io_range range;
+        
+        bus = kvm_get_bus(kvm, bus_idx);
+        if (!bus)
+                return -ENOMEM;
+
+        /* exclude ioeventfd which is limited by maximum fd */
+        if (bus->dev_count - bus->ioeventfd_count > NR_IOBUS_DEVS - 1)
+                return -ENOSPC;
+
+        new_bus = kmalloc(struct_size(bus, range, bus->dev_count + 1),
+                          GFP_KERNEL_ACCOUNT);
+        if (!new_bus)
+                return -ENOMEM;
+
+        range = (struct kvm_io_range) {
+                .addr = addr,
+                .len = len,
+                .dev = dev,
+        };
+
+        for (i = 0; i < bus->dev_count; i++)
+                if (kvm_io_bus_cmp(&bus->range[i], &range) > 0)
+                        break;
+
+        memcpy(new_bus, bus, sizeof(*bus) + i * sizeof(struct kvm_io_range));
+        new_bus->dev_count++;
+        new_bus->range[i] = range;
+        memcpy(new_bus->range + i + 1, bus->range + i,
+                (bus->dev_count - i) * sizeof(struct kvm_io_range));
+        rcu_assign_pointer(kvm->buses[bus_idx], new_bus);
+        synchronize_srcu_expedited(&kvm->srcu);
+        kfree(bus);
+
+        return 0;
 }
 ```
