--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -173,7 +173,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
         }
 ```
 
-## kvm_pic_init(): pic(8259A)的初始化
+## kvm_pic_init(): 虚拟pic(8259A)的初始化
 
 ```cpp
 // arch/x86/kvm/i8259.c
@@ -206,11 +206,11 @@ int kvm_pic_init(struct kvm *kvm)
                                       &s->dev_master);
         if (ret < 0)
                 goto fail_unlock;
-
+        // 注册PIO类型bus的访问
         ret = kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0xa0, 2, &s->dev_slave);
         if (ret < 0)
                 goto fail_unreg_2;
-
+        // 注册PIO类型bus的访问
         ret = kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0x4d0, 2, &s->dev_eclr);
         if (ret < 0)
                 goto fail_unreg_1;
@@ -236,7 +236,9 @@ fail_unlock:
 }
 ```
 
-### kvm_io_bus_register_dev(): 
+### kvm_io_bus_register_dev(): 在相应的
+
+8259A PIC属于PIO访问类型.
 
 ```cpp
 int kvm_io_bus_register_dev(struct kvm *kvm, enum kvm_bus bus_idx, gpa_t addr,
@@ -245,7 +247,7 @@ int kvm_io_bus_register_dev(struct kvm *kvm, enum kvm_bus bus_idx, gpa_t addr,
         int i;
         struct kvm_io_bus *new_bus, *bus;
         struct kvm_io_range range;
-        
+        // 获取io_bus总线
         bus = kvm_get_bus(kvm, bus_idx);
         if (!bus)
                 return -ENOMEM;
@@ -281,3 +283,11 @@ int kvm_io_bus_register_dev(struct kvm *kvm, enum kvm_bus bus_idx, gpa_t addr,
         return 0;
 }
 ```
+
+虚拟bus总线结构如下, 注意IO端口地址与设备读写函数的关联
+
+![2020-05-04-17-34-05.png](./images/2020-05-04-17-34-05.png)
+
+每个`kvm_io_device`的设备都有对应的读写函数
+
+## 
