--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -99,6 +99,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   |─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0x4d0, 2, &s->dev_eclr); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
  |   |   └─ kvm->arch.vpic = s;   // 将s赋值给kvm->arch.vpic
  |   ├─ kvm_ioapic_init()   // ioapic的初始化
+ |   |   |─ struct kvm_ioapic *ioapic = kzalloc(sizeof(struct kvm_ioapic), GFP_KERNEL_ACCOUNT);  // 创建kvm_pic结构
  |   ├─ kvm_setup_default_irq_routing()   // ept violation异常的处理
  |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // irqchip为kernel模式, 即在kernel中实现
 
@@ -133,7 +134,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
 ```
 
-## 入口代码
+# 入口代码
 
 ```cpp
         case KVM_CREATE_IRQCHIP: {
@@ -173,7 +174,9 @@ kvm_vm_ioctl()  // vm ioctl的入口
         }
 ```
 
-## kvm_pic_init(): 虚拟pic(8259A)的初始化
+# kvm_pic_init(): 虚拟pic(8259A)的初始化
+
+`arch/x86/kvm/i8259.c`
 
 ```cpp
 // arch/x86/kvm/i8259.c
@@ -236,7 +239,7 @@ fail_unlock:
 }
 ```
 
-### kvm_io_bus_register_dev(): 在相应的
+### kvm_io_bus_register_dev(): 在相应的io_bus总线上注册设备
 
 8259A PIC属于PIO访问类型.
 
@@ -255,7 +258,7 @@ int kvm_io_bus_register_dev(struct kvm *kvm, enum kvm_bus bus_idx, gpa_t addr,
         /* exclude ioeventfd which is limited by maximum fd */
         if (bus->dev_count - bus->ioeventfd_count > NR_IOBUS_DEVS - 1)
                 return -ENOSPC;
-
+        // 生成新的io_bus
         new_bus = kmalloc(struct_size(bus, range, bus->dev_count + 1),
                           GFP_KERNEL_ACCOUNT);
         if (!new_bus)
@@ -284,10 +287,42 @@ int kvm_io_bus_register_dev(struct kvm *kvm, enum kvm_bus bus_idx, gpa_t addr,
 }
 ```
 
+### 三种设备在虚拟bus上的结构
+
 虚拟bus总线结构如下, 注意IO端口地址与设备读写函数的关联
 
 ![2020-05-04-17-34-05.png](./images/2020-05-04-17-34-05.png)
 
 每个`kvm_io_device`的设备都有对应的读写函数
 
-## 
+# kvm_ioapic_init(): ioapic的初始化
+
+```cpp
+int kvm_ioapic_init(struct kvm *kvm)
+{
+        struct kvm_ioapic *ioapic;
+        int ret;
+        // 
+        ioapic = kzalloc(sizeof(struct kvm_ioapic), GFP_KERNEL_ACCOUNT);
+        if (!ioapic)
+                return -ENOMEM;
+        spin_lock_init(&ioapic->lock);
+        INIT_DELAYED_WORK(&ioapic->eoi_inject, kvm_ioapic_eoi_inject_work);
+        kvm->arch.vioapic = ioapic;
+        kvm_ioapic_reset(ioapic);
+        kvm_iodevice_init(&ioapic->dev, &ioapic_mmio_ops);
+        ioapic->kvm = kvm;
+        mutex_lock(&kvm->slots_lock);
+        ret = kvm_io_bus_register_dev(kvm, KVM_MMIO_BUS, ioapic->base_address,
+                                      IOAPIC_MEM_LENGTH, &ioapic->dev);
+        mutex_unlock(&kvm->slots_lock);
+        if (ret < 0) {
+                kvm->arch.vioapic = NULL;
+                kfree(ioapic);
+        }
+
+        return ret;
+}
+```
+
+# kvm_setup_default_irq_routing():
