--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -100,7 +100,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   └─ kvm->arch.vpic = s;   // 将s赋值给kvm->arch.vpic
  |   ├─ kvm_ioapic_init()   // ioapic的初始化
  |   |   |─ struct kvm_ioapic *ioapic = kzalloc(sizeof(struct kvm_ioapic), GFP_KERNEL_ACCOUNT);  // 创建kvm_pic结构
- |   ├─ kvm_setup_default_irq_routing()   // ept violation异常的处理
+ |   ├─ kvm_setup_default_irq_routing()   // 
  |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // irqchip为kernel模式, 即在kernel中实现
 
 
@@ -258,7 +258,7 @@ int kvm_io_bus_register_dev(struct kvm *kvm, enum kvm_bus bus_idx, gpa_t addr,
         /* exclude ioeventfd which is limited by maximum fd */
         if (bus->dev_count - bus->ioeventfd_count > NR_IOBUS_DEVS - 1)
                 return -ENOSPC;
-        // 生成新的io_bus
+        // 分配新的io_bus
         new_bus = kmalloc(struct_size(bus, range, bus->dev_count + 1),
                           GFP_KERNEL_ACCOUNT);
         if (!new_bus)
@@ -302,11 +302,12 @@ int kvm_ioapic_init(struct kvm *kvm)
 {
         struct kvm_ioapic *ioapic;
         int ret;
-        // 
+        // 分配 kmv_ioapic 结构体
         ioapic = kzalloc(sizeof(struct kvm_ioapic), GFP_KERNEL_ACCOUNT);
         if (!ioapic)
                 return -ENOMEM;
         spin_lock_init(&ioapic->lock);
+        // 
         INIT_DELAYED_WORK(&ioapic->eoi_inject, kvm_ioapic_eoi_inject_work);
         kvm->arch.vioapic = ioapic;
         kvm_ioapic_reset(ioapic);
@@ -325,4 +326,9 @@ int kvm_ioapic_init(struct kvm *kvm)
 }
 ```
 
+在MMIO_BUS上注册了ioapic设备
+
+![2020-05-04-17-58-37.png](./images/2020-05-04-17-58-37.png)
+
 # kvm_setup_default_irq_routing():
+
