--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -100,7 +100,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   └─ kvm->arch.vpic = s;   // 将s赋值给kvm->arch.vpic
  |   ├─ kvm_ioapic_init()   // ioapic的初始化
  |   |   |─ struct kvm_ioapic *ioapic = kzalloc(sizeof(struct kvm_ioapic), GFP_KERNEL_ACCOUNT);  // 创建kvm_pic结构
- |   ├─ kvm_setup_default_irq_routing()   // 
+ |   ├─ kvm_setup_default_irq_routing()   // 设置默认的irq路由
  |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // irqchip为kernel模式, 即在kernel中实现
 
 
