--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -74,7 +74,7 @@ kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT2, &config);
 kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT)
 ```
 
-# PIC的创建
+# 初始化中断控制器(PIC) 
 
 ## QEMU
 
@@ -100,7 +100,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   └─ kvm->arch.vpic = s;   // 将s赋值给kvm->arch.vpic
  |   ├─ kvm_ioapic_init()   // ioapic的初始化
  |   |   ├─ struct kvm_ioapic *ioapic = kzalloc(sizeof(struct kvm_ioapic), GFP_KERNEL_ACCOUNT);  // 创建kvm_pic结构
- |   ├─ kvm_setup_default_irq_routing()   // 设置默认的irq路由表
+ |   ├─ kvm_setup_default_irq_routing();   // 设置默认的irq路由表
  |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // irqchip为kernel模式, 即在kernel中实现
 
 
@@ -330,5 +330,14 @@ int kvm_ioapic_init(struct kvm *kvm)
 
 ![2020-05-04-17-58-37.png](./images/2020-05-04-17-58-37.png)
 
-# kvm_setup_default_irq_routing(): 建立默认路由表
+# kvm_setup_default_irq_routing(): 默认中断路由表的初始化
 
+```cpp
+int kvm_setup_default_irq_routing(struct kvm *kvm)
+{
+        return kvm_set_irq_routing(kvm, default_routing,
+                                   ARRAY_SIZE(default_routing), 0);
+}
+```
+
+用户空间qemu通过`KVM_CREATE_DEVICE` API接口进入KVM的`kvm_vm_ioctl`处理函数，继而进入`kvm_arch_vm_ioctl`，根据参数中的`KVM_CREATE_IRQCHIP`标志进入**初始化中断控制器**的流程，首先肯定是**注册pic**和**io APIC**，这里我们就不详细阐述，重点在于后面对中断路由表的初始化过程。**中断路由表的初始化**通过`kvm_setup_default_irq_routing`函数实现，
