--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -1,5 +1,29 @@
 
-# Time Tick
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. Time Tick](#1-time-tick)
+  - [1.1. 虚拟化下的timer](#11-虚拟化下的timer)
+- [2. 相关代码](#2-相关代码)
+- [3. 物理芯片介绍](#3-物理芯片介绍)
+  - [3.1. PIT主要为Intel 8254 PIT芯片](#31-pit主要为intel-8254-pit芯片)
+  - [3.2. PIC主要为8259A PIC芯片](#32-pic主要为8259a-pic芯片)
+- [4. 整体流程](#4-整体流程)
+- [5. QEMU](#5-qemu)
+- [6. 初始化中断控制器(PIC)](#6-初始化中断控制器pic)
+  - [6.1. QEMU](#61-qemu)
+  - [6.2. 整体流程](#62-整体流程)
+  - [7. 入口代码](#7-入口代码)
+    - [8. kvm_pic_init(): 虚拟pic(8259A)的初始化](#8-kvm_pic_init-虚拟pic8259a的初始化)
+    - [8.1. kvm_io_bus_register_dev(): 在相应的io_bus总线上注册设备](#81-kvm_io_bus_register_dev-在相应的io_bus总线上注册设备)
+    - [8.2. 三种设备在虚拟bus上的结构](#82-三种设备在虚拟bus上的结构)
+- [9. kvm_ioapic_init(): ioapic的初始化](#9-kvm_ioapic_init-ioapic的初始化)
+- [10. kvm_setup_default_irq_routing(): 默认中断路由表的初始化](#10-kvm_setup_default_irq_routing-默认中断路由表的初始化)
+
+<!-- /code_chunk_output -->
+
+# 1. Time Tick
 
 一个操作系统要跑起来，必须有**Time Tick**，它就像是身体的脉搏。
 
@@ -8,7 +32,7 @@
 - PIT定期(**1ms in Linux**)产生一个**timer interrupt**，作为**global tick**, 
 - **APIC Timer**产生一个**local tick**。
 
-## 虚拟化下的timer
+## 1.1. 虚拟化下的timer
 
 在虚拟化情况下，必须为**guest OS**模拟一个**PIT**和**APIC Timer**。
 
@@ -22,13 +46,13 @@
 
 这里重点是讲内核PIT的模拟实现，弄清楚它是如何为guest OS提供时钟的。
 
-# 相关代码
+# 2. 相关代码
 
 ![2020-05-04-13-06-31.png](./images/2020-05-04-13-06-31.png)
 
-# 物理芯片介绍
+# 3. 物理芯片介绍
 
-## PIT主要为Intel 8254 PIT芯片
+## 3.1. PIT主要为Intel 8254 PIT芯片
 
 **PIT**(**Programmable Interval Timer**), **可编程间隔定时器**
 
@@ -42,7 +66,7 @@ i386使用通常是Intel 8254 PIT芯片, 它的I/O端口地址范围是`40h ~ 43
 - **通道1**通常用来控制**DMAC对RAM的刷新**
 - **通道3**被连接到**PC机的扬声器**, 以产生**方波信号**.
 
-## PIC主要为8259A PIC芯片
+## 3.2. PIC主要为8259A PIC芯片
 
 **PIC**(**Programmable Interrupt Controller**), **可编程中断控制器**
 
@@ -56,7 +80,7 @@ PIC有三个重要的寄存器:
 
 (3) IMR(Interrupt Mask Register, 中断屏蔽寄存器): 共8位, 某位置为1表明对应的中断管脚被屏蔽.
 
-# 整体流程
+# 4. 整体流程
 
 整个主要流程:
 
@@ -64,7 +88,7 @@ PIC有三个重要的寄存器:
 
 修正: 重定向表中有目标lapic的id
 
-# QEMU
+# 5. QEMU
 
 PIT创建:
 
@@ -74,16 +98,16 @@ kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT2, &config);
 kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT)
 ```
 
-# 初始化中断控制器(PIC) 
+# 6. 初始化中断控制器(PIC)
 
-## QEMU
+## 6.1. QEMU
 
 ```cpp
 // kvm-all.c/kvm_init/kvm_irqchip_create
 kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP)
 ```
 
-## 整体流程
+## 6.2. 整体流程
 
 ```cpp
 kvm_vm_ioctl()  // vm ioctl的入口
@@ -134,7 +158,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
 ```
 
-# 入口代码
+## 7. 入口代码
 
 ```cpp
         case KVM_CREATE_IRQCHIP: {
@@ -174,7 +198,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
         }
 ```
 
-# kvm_pic_init(): 虚拟pic(8259A)的初始化
+### 8. kvm_pic_init(): 虚拟pic(8259A)的初始化
 
 `arch/x86/kvm/i8259.c`
 
@@ -239,7 +263,7 @@ fail_unlock:
 }
 ```
 
-### kvm_io_bus_register_dev(): 在相应的io_bus总线上注册设备
+### 8.1. kvm_io_bus_register_dev(): 在相应的io_bus总线上注册设备
 
 8259A PIC属于PIO访问类型.
 
@@ -287,7 +311,7 @@ int kvm_io_bus_register_dev(struct kvm *kvm, enum kvm_bus bus_idx, gpa_t addr,
 }
 ```
 
-### 三种设备在虚拟bus上的结构
+### 8.2. 三种设备在虚拟bus上的结构
 
 虚拟bus总线结构如下, 注意IO端口地址与设备读写函数的关联
 
@@ -295,7 +319,7 @@ int kvm_io_bus_register_dev(struct kvm *kvm, enum kvm_bus bus_idx, gpa_t addr,
 
 每个`kvm_io_device`的设备都有对应的读写函数
 
-# kvm_ioapic_init(): ioapic的初始化
+# 9. kvm_ioapic_init(): ioapic的初始化
 
 ```cpp
 int kvm_ioapic_init(struct kvm *kvm)
@@ -330,7 +354,7 @@ int kvm_ioapic_init(struct kvm *kvm)
 
 ![2020-05-04-17-58-37.png](./images/2020-05-04-17-58-37.png)
 
-# kvm_setup_default_irq_routing(): 默认中断路由表的初始化
+# 10. kvm_setup_default_irq_routing(): 默认中断路由表的初始化
 
 ```cpp
 int kvm_setup_default_irq_routing(struct kvm *kvm)
