--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -15,7 +15,7 @@
   - [6.1. QEMU](#61-qemu)
   - [6.2. 整体流程](#62-整体流程)
   - [7. 入口代码](#7-入口代码)
-    - [8. kvm_pic_init(): 虚拟pic(8259A)的初始化](#8-kvm_pic_init-虚拟pic8259a的初始化)
+  - [8. kvm_pic_init(): 虚拟pic(8259A)的初始化](#8-kvm_pic_init-虚拟pic8259a的初始化)
     - [8.1. kvm_io_bus_register_dev(): 在相应的io_bus总线上注册设备](#81-kvm_io_bus_register_dev-在相应的io_bus总线上注册设备)
     - [8.2. 三种设备在虚拟bus上的结构](#82-三种设备在虚拟bus上的结构)
 - [9. kvm_ioapic_init(): ioapic的初始化](#9-kvm_ioapic_init-ioapic的初始化)
@@ -182,7 +182,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
                         kvm_pic_destroy(kvm);
                         goto create_irqchip_unlock;
                 }
-
+                // 建立默认中断路由表
                 r = kvm_setup_default_irq_routing(kvm);
                 if (r) {
                         kvm_ioapic_destroy(kvm);
@@ -198,7 +198,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
         }
 ```
 
-### 8. kvm_pic_init(): 虚拟pic(8259A)的初始化
+## 8. kvm_pic_init(): 虚拟pic(8259A)的初始化
 
 `arch/x86/kvm/i8259.c`
 
