--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -10,16 +10,17 @@
   - [3.1. PIT主要为Intel 8254 PIT芯片](#31-pit主要为intel-8254-pit芯片)
   - [3.2. PIC主要为8259A PIC芯片](#32-pic主要为8259a-pic芯片)
 - [4. 整体流程](#4-整体流程)
-- [5. QEMU](#5-qemu)
 - [6. 初始化中断控制器(PIC)](#6-初始化中断控制器pic)
   - [6.1. QEMU](#61-qemu)
   - [6.2. 整体流程](#62-整体流程)
-  - [7. 入口代码](#7-入口代码)
-  - [8. kvm_pic_init(): 虚拟pic(8259A)的初始化](#8-kvm_pic_init-虚拟pic8259a的初始化)
-    - [8.1. kvm_io_bus_register_dev(): 在相应的io_bus总线上注册设备](#81-kvm_io_bus_register_dev-在相应的io_bus总线上注册设备)
-    - [8.2. 三种设备在虚拟bus上的结构](#82-三种设备在虚拟bus上的结构)
-- [9. kvm_ioapic_init(): ioapic的初始化](#9-kvm_ioapic_init-ioapic的初始化)
-- [10. kvm_setup_default_irq_routing(): 默认中断路由表的初始化](#10-kvm_setup_default_irq_routing-默认中断路由表的初始化)
+  - [6.3. 入口代码](#63-入口代码)
+  - [6.4. kvm_pic_init(): 虚拟pic(8259A)的初始化](#64-kvm_pic_init-虚拟pic8259a的初始化)
+    - [6.4.1. kvm_io_bus_register_dev(): 在相应的io_bus总线上注册设备](#641-kvm_io_bus_register_dev-在相应的io_bus总线上注册设备)
+    - [6.4.2. 三种设备在虚拟bus上的结构](#642-三种设备在虚拟bus上的结构)
+  - [6.5. kvm_ioapic_init(): ioapic的初始化](#65-kvm_ioapic_init-ioapic的初始化)
+  - [6.6. kvm_setup_default_irq_routing(): 默认中断路由表的初始化](#66-kvm_setup_default_irq_routing-默认中断路由表的初始化)
+- [虚拟PIT的创建](#虚拟pit的创建)
+  - [QEMU](#qemu)
 
 <!-- /code_chunk_output -->
 
@@ -88,16 +89,6 @@ PIC有三个重要的寄存器:
 
 修正: 重定向表中有目标lapic的id
 
-# 5. QEMU
-
-PIT创建:
-
-```cpp
-// i8254.c
-kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT2, &config);
-kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT)
-```
-
 # 6. 初始化中断控制器(PIC)
 
 ## 6.1. QEMU
@@ -158,7 +149,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
 ```
 
-## 7. 入口代码
+## 6.3. 入口代码
 
 ```cpp
         case KVM_CREATE_IRQCHIP: {
@@ -191,6 +182,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
                 }
                 /* Write kvm->irq_routing before enabling irqchip_in_kernel. */
                 smp_wmb();
+                // irq属于内核实现
                 kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;
         create_irqchip_unlock:
                 mutex_unlock(&kvm->lock);
@@ -198,7 +190,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
         }
 ```
 
-## 8. kvm_pic_init(): 虚拟pic(8259A)的初始化
+## 6.4. kvm_pic_init(): 虚拟pic(8259A)的初始化
 
 `arch/x86/kvm/i8259.c`
 
@@ -263,7 +255,7 @@ fail_unlock:
 }
 ```
 
-### 8.1. kvm_io_bus_register_dev(): 在相应的io_bus总线上注册设备
+### 6.4.1. kvm_io_bus_register_dev(): 在相应的io_bus总线上注册设备
 
 8259A PIC属于PIO访问类型.
 
@@ -311,7 +303,7 @@ int kvm_io_bus_register_dev(struct kvm *kvm, enum kvm_bus bus_idx, gpa_t addr,
 }
 ```
 
-### 8.2. 三种设备在虚拟bus上的结构
+### 6.4.2. 三种设备在虚拟bus上的结构
 
 虚拟bus总线结构如下, 注意IO端口地址与设备读写函数的关联
 
@@ -319,7 +311,7 @@ int kvm_io_bus_register_dev(struct kvm *kvm, enum kvm_bus bus_idx, gpa_t addr,
 
 每个`kvm_io_device`的设备都有对应的读写函数
 
-# 9. kvm_ioapic_init(): ioapic的初始化
+## 6.5. kvm_ioapic_init(): ioapic的初始化
 
 ```cpp
 int kvm_ioapic_init(struct kvm *kvm)
@@ -354,7 +346,9 @@ int kvm_ioapic_init(struct kvm *kvm)
 
 ![2020-05-04-17-58-37.png](./images/2020-05-04-17-58-37.png)
 
-# 10. kvm_setup_default_irq_routing(): 默认中断路由表的初始化
+## 6.6. kvm_setup_default_irq_routing(): 默认中断路由表的初始化
+
+**中断路由表的初始化**通过`kvm_setup_default_irq_routing`函数实现，
 
 ```cpp
 int kvm_setup_default_irq_routing(struct kvm *kvm)
@@ -364,4 +358,14 @@ int kvm_setup_default_irq_routing(struct kvm *kvm)
 }
 ```
 
-用户空间qemu通过`KVM_CREATE_DEVICE` API接口进入KVM的`kvm_vm_ioctl`处理函数，继而进入`kvm_arch_vm_ioctl`，根据参数中的`KVM_CREATE_IRQCHIP`标志进入**初始化中断控制器**的流程，首先肯定是**注册pic**和**io APIC**，这里我们就不详细阐述，重点在于后面对中断路由表的初始化过程。**中断路由表的初始化**通过`kvm_setup_default_irq_routing`函数实现，
+# 虚拟PIT的创建
+
+## QEMU
+
+PIT创建:
+
+```cpp
+// i8254.c
+kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT2, &config);
+kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT)
+```
