--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -380,7 +380,7 @@ int kvm_setup_default_irq_routing(struct kvm *kvm)
 }
 ```
 
-首个参数kvm指定特定的虚拟机，后面`default_routing`是一个**全局**的`kvm_irq_routing_entry`数组，就定义在`irq_comm.c`中，该数组没别的作用，就是初始化`kvm_irq_routing_table`，看下`kvm_set_irq_routing`
+首个参数kvm指定特定的虚拟机，后面`default_routing`是一个**全局**的`kvm_irq_routing_entry`数组，一共24项，该数组没别的作用，就是初始化`kvm_irq_routing_table`路由表
 
 ```cpp
 int kvm_set_irq_routing(struct kvm *kvm,
