--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -358,6 +358,7 @@ int kvm_ioapic_init(struct kvm *kvm)
           .u.irqchip = { .irqchip = KVM_IRQCHIP_IOAPIC, .pin = (irq) } }
 #define ROUTING_ENTRY1(irq) IOAPIC_ROUTING_ENTRY(irq)
 
+// 默认有24个表项
 static const struct kvm_irq_routing_entry default_routing[] = {
         ROUTING_ENTRY2(0), ROUTING_ENTRY2(1),
         ROUTING_ENTRY2(2), ROUTING_ENTRY2(3),
@@ -380,7 +381,7 @@ int kvm_setup_default_irq_routing(struct kvm *kvm)
 }
 ```
 
-首个参数kvm指定特定的虚拟机，后面`default_routing`是一个**全局**的`kvm_irq_routing_entry`数组，一共24项，该数组没别的作用，就是初始化`kvm_irq_routing_table`路由表
+首个参数kvm指定特定的虚拟机，后面`default_routing`是一个**全局**的`kvm_irq_routing_entry`数组，一共24项，该数组没别的作用，就是初始化`kvm_irq_routing_table`**路由表**
 
 ```cpp
 int kvm_set_irq_routing(struct kvm *kvm,
@@ -388,7 +389,9 @@ int kvm_set_irq_routing(struct kvm *kvm,
                         unsigned nr,
                         unsigned flags)
 {
+        // 路由表
         struct kvm_irq_routing_table *new, *old;
+        // 路由表项
         struct kvm_kernel_irq_routing_entry *e;
         u32 i, j, nr_rt_entries = 0;
         int r;
@@ -400,11 +403,11 @@ int kvm_set_irq_routing(struct kvm *kvm,
         }
 
         nr_rt_entries += 1;
-        /*为中断路由表申请空间*/
+        /* 为中断路由表申请空间 */
         new = kzalloc(struct_size(new, map, nr_rt_entries), GFP_KERNEL_ACCOUNT);
         if (!new)
                 return -ENOMEM;
-        /*设置指针*/
+        /* 设置指针 */
         new->nr_rt_entries = nr_rt_entries;
         for (i = 0; i < KVM_NR_IRQCHIPS; i++)
                 for (j = 0; j < KVM_IRQCHIP_NUM_PINS; j++)
