--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -24,11 +24,11 @@ KVM中`irq_routing`指向了**IRQ CHIP抽象接口**的**表**`kvm_irq_routing_t
 
 `kvm_irq_routing_table.chip`每个成员**对应一个引脚**，内容记录了**该引脚的GSI号**，其实**该成员已经不用了**。
 
-`kvm_irq_routing_table.map`成员指向一个**hash桶**，桶上的每个元素**对应一个抽象引脚**，即**每个链对一个IRQ号**，链上的每个元素指向`kvm_kernel_irq_routing_entry`结构体，**每个该结构体**代表了一个**具体芯片**的`set()`方法的实现，在进行中断注入的时候，每种芯片的set方法都会被调用一下，在guest中会忽略没有实现的芯片类型发送的中断消息(其实这里是可以优化的，必经不需要多次的中断注入，在QEMU注册中断设备的时候就不要注册不需要的中断芯片类型)
+`kvm_irq_routing_table.map`成员指向一个**hash桶**，桶上的每个元素**对应一个抽象引脚**，即**每个链对一个IRQ号**，链上的每个元素指向`kvm_kernel_irq_routing_entry`结构体，**每个该结构体**代表了一个**具体芯片**的`set()`方法的实现，在进行**中断注入的时候**，**每种芯片的set方法**都会**被调用**一下，在**guest**中会**忽略没有实现的芯片类型发送的中断消息**(其实这里是可以优化的，必经不需要多次的中断注入，在**QEMU注册中断设备**的时候就**不要注册不需要的中断芯片类型**)
 
  
 
-kvm_kernel_irq_routing_entry结构体对应具体芯片的一个引脚，按照芯片类型实现kvm_kernel_irq_routing_entry.set接口，kvm_kernel_irq_routing_entry.chip成员记录了该结构体对应的具体是哪种芯片的那个引脚，kvm_kernel_irq_routing_entry.gsi记录了该引脚的gsi号。
+`kvm_kernel_irq_routing_entry`结构体**对应具体芯片的一个引脚**，按照芯片类型实现`kvm_kernel_irq_routing_entry.set`接口，`kvm_kernel_irq_routing_entry.chip`成员记录了该结构体对应的具体是哪种芯片的那个引脚，`kvm_kernel_irq_routing_entry.gsi`记录了该引脚的gsi号。
 
  
 
