--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -353,11 +353,6 @@ int kvm_ioapic_init(struct kvm *kvm)
 **中断路由表的初始化**通过`kvm_setup_default_irq_routing`函数实现，
 
 ```cpp
-#define IOAPIC_ROUTING_ENTRY(irq) \
-        { .gsi = irq, .type = KVM_IRQ_ROUTING_IRQCHIP,  \
-          .u.irqchip = { .irqchip = KVM_IRQCHIP_IOAPIC, .pin = (irq) } }
-#define ROUTING_ENTRY1(irq) IOAPIC_ROUTING_ENTRY(irq)
-
 // 默认有24个表项
 static const struct kvm_irq_routing_entry default_routing[] = {
         ROUTING_ENTRY2(0), ROUTING_ENTRY2(1),
@@ -382,6 +377,8 @@ int kvm_setup_default_irq_routing(struct kvm *kvm)
 ```
 
 首个参数kvm指定特定的虚拟机，后面`default_routing`是一个**全局**的`kvm_irq_routing_entry`数组，一共24项，该数组没别的作用，就是初始化`kvm_irq_routing_table`**路由表**
+
+看`kvm_set_irq_routing`,
 
 ```cpp
 int kvm_set_irq_routing(struct kvm *kvm,
@@ -415,6 +412,7 @@ int kvm_set_irq_routing(struct kvm *kvm,
         /*初始化每一项kvm_kernel_irq_routing_entry*/
         for (i = 0; i < nr; ++i) {
                 r = -ENOMEM;
+                // 
                 e = kzalloc(sizeof(*e), GFP_KERNEL_ACCOUNT);
                 if (!e)
                         goto out;
@@ -460,15 +458,23 @@ out:
 }
 ```
 
-可以参考一个宏：
+看一下这个**表项宏**：
 
 ```cpp
 #define IOAPIC_ROUTING_ENTRY(irq) \
         { .gsi = irq, .type = KVM_IRQ_ROUTING_IRQCHIP,  \
           .u.irqchip = { .irqchip = KVM_IRQCHIP_IOAPIC, .pin = (irq) } }
+#define ROUTING_ENTRY1(irq) IOAPIC_ROUTING_ENTRY(irq)
 ```
 
-这是**初始化**`default_routing`的一个关键宏，**每一项**都是通过该宏**传递irq号**（`0-23`）64位下是`0-47`, 可见**gsi**就是**irq号**，所以实际上，回到函数中`nr_rt_entries`就是数组中**项数**，接着为`kvm_irq_routing_table`**分配空间**，注意分配的空间包含**三部分**：`kvm_irq_routing_table`**结构**、`nr_rt_entries`个`hlist_head`和**nr个**`kvm_kernel_irq_routing_entry`，所以`kvm_irq_routing_table`的**大小**是和**全局数组的大小**一样的。整个结构如下图所示
+这是**初始化**`default_routing`的一个关键宏，**每一项**都是通过该宏**传递irq号**（`0-23`）64位下是`0-47`, 可见**gsi**就是**irq号**.
+
+所以实际上，回到函数中`nr_rt_entries`就是数组中**项数**，接着为`kvm_irq_routing_table`**分配空间**，注意分配的空间包含**三部分**：
+- `kvm_irq_routing_table`**结构**、
+- `nr_rt_entries`个`hlist_head`
+- 和**nr个**`kvm_kernel_irq_routing_entry`
+
+所以`kvm_irq_routing_table`的**大小**是和**全局数组的大小**一样的。整个结构如下图所示
 
 ![2020-05-03-13-18-31.png](./images/2020-05-03-13-18-31.png)
 
