--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -20,6 +20,11 @@ KVM将**所有类型**的**IRQ CHIP**抽象出**一个接口**，类似于C++的
 
 ![2020-05-03-19-01-08.png](./images/2020-05-03-19-01-08.png)
 
+struct kvm_irq_routing_table是vm整个的中断路由信息，以gsi为索引可以找到对应的路由项，即struct kvm_kernel_irq_routing_entry。struct kvm_irq_routing_table中map是以gsi为索引的结构体数组，数组元素是双链表，同struct kvm_kernel_irq_routing_entry中link关联。
+————————————————
+版权声明：本文为CSDN博主「Mr0cheng」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
+原文链接：
+
 KVM中`irq_routing`指向了**IRQ CHIP抽象接口**的**表**`kvm_irq_routing_table`结构体。
 
 `kvm_irq_routing_table.chip`每个成员**对应一个引脚**，内容记录了**该引脚的GSI号**，其实**该成员已经不用了**。
@@ -109,3 +114,5 @@ struct kvm_pic {
 # 参考
 
 https://blog.csdn.net/leoufung/article/details/53081207
+
+https://blog.csdn.net/Mr0cheng/article/details/102578713 (未完)
