--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -20,10 +20,10 @@ KVM将**所有类型**的**IRQ CHIP**抽象出**一个接口**，类似于C++的
 
 ![2020-05-03-19-01-08.png](./images/2020-05-03-19-01-08.png)
 
-struct kvm_irq_routing_table是vm整个的中断路由信息，以gsi为索引可以找到对应的路由项，即struct kvm_kernel_irq_routing_entry。struct kvm_irq_routing_table中map是以gsi为索引的结构体数组，数组元素是双链表，同struct kvm_kernel_irq_routing_entry中link关联。
-————————————————
-版权声明：本文为CSDN博主「Mr0cheng」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
-原文链接：
+`struct kvm_irq_routing_table`是**vm整个**的**中断路由信息**，以**gsi为索引**可以找到**对应的路由项**，即`struct kvm_kernel_irq_routing_entry`。`struct kvm_irq_routing_table`中**map**是**以gsi为索引**的**结构体数组**，数组元素是**双链表**，同`struct kvm_kernel_irq_routing_entry`中**link关联**。
+
+
+
 
 KVM中`irq_routing`指向了**IRQ CHIP抽象接口**的**表**`kvm_irq_routing_table`结构体。
 
