--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/2. 数据结构.md
+++ b/Virtualization/KVM/3. CPU虚拟化/2. 数据结构.md
@@ -79,7 +79,7 @@ struct kvm {
 	/*
 	 * Update side is protected by irq_lock.
 	 */
-	// irq相关部分
+	// 中断路由信息表
 	struct kvm_irq_routing_table __rcu *irq_routing;
 #endif
 #ifdef CONFIG_HAVE_KVM_IRQFD
