--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -38,6 +38,9 @@ KVM在还**没有EPT硬件支持**的时候，采用的是**影子页表**（sha
 **一个虚拟机的所有slot(即kvm->memslots)构成完整的虚拟机物理地址空间**.
 
 ```cpp
+struct kvm {
+	struct kvm_memslots __rcu *memslots[KVM_ADDRESS_SPACE_NUM];
+}
 /*
  * Note:
  * memslots are not sorted by id anymore, please use id_to_memslot()
