--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -15,7 +15,36 @@ KVM将**所有类型**的**IRQ CHIP**抽象出**一个接口**，类似于C++的
 其中**IOAPIC**中对于**每个引脚**，又定义了**PRT**，**IOAPIC**收到中断后根据**RTE格式化**出**中断消息**并发送给**目标LAPIC**，LAPIC完成**中断的选举和注入实现**。
 
 
-# 
+# struct kvm_irq_routing_table: 虚拟机的中断路由信息表
+
+一个`struct kvm`代表一个虚拟机, `irq_routing`是该**虚拟机的整个中断路由信息表**
+
+
+
+```cpp
+struct kvm {
+        struct mutex irq_lock;
+#ifdef CONFIG_HAVE_KVM_IRQCHIP
+	/*
+	 * Update side is protected by irq_lock.
+	 */
+	// irq相关部分
+	struct kvm_irq_routing_table __rcu *irq_routing;
+#endif
+}
+
+#ifdef CONFIG_HAVE_KVM_IRQ_ROUTING
+struct kvm_irq_routing_table {
+        int chip[KVM_NR_IRQCHIPS][KVM_IRQCHIP_NUM_PINS];
+        u32 nr_rt_entries;
+        /*
+         * Array indexed by gsi. Each entry contains list of irq chips
+         * the gsi is connected to.
+         */
+        struct hlist_head map[0];
+};
+#endif
+```
 
 # 虚拟中断子系统的关系
 
