--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -17,10 +17,6 @@ KVM将**所有类型**的**IRQ CHIP**抽象出**一个接口**，类似于C++的
 
 # struct kvm_irq_routing_table: 虚拟机的中断路由信息表
 
-一个`struct kvm`代表一个虚拟机, `irq_routing`是该**虚拟机的整个中断路由信息表**
-
-
-
 ```cpp
 struct kvm {
         struct mutex irq_lock;
@@ -32,6 +28,10 @@ struct kvm {
 	struct kvm_irq_routing_table __rcu *irq_routing;
 #endif
 }
+
+#define KVM_NR_IRQCHIPS 3
+#define KVM_IOAPIC_NUM_PINS 24
+#define KVM_IRQCHIP_NUM_PINS KVM_IOAPIC_NUM_PINS
 
 #ifdef CONFIG_HAVE_KVM_IRQ_ROUTING
 struct kvm_irq_routing_table {
@@ -46,6 +46,11 @@ struct kvm_irq_routing_table {
 #endif
 ```
 
+一个`struct kvm`代表一个虚拟机, 
+`irq_routing`指向了**IRQ CHIP抽象接口**的**表**`kvm_irq_routing_table`结构体。`irq_routing`是该**虚拟机的整个中断路由信息表**, 
+
+
+
 # 虚拟中断子系统的关系
 
 ## IRQ抽象接口层
@@ -57,7 +62,6 @@ struct kvm_irq_routing_table {
 
 
 
-KVM中`irq_routing`指向了**IRQ CHIP抽象接口**的**表**`kvm_irq_routing_table`结构体。
 
 `kvm_irq_routing_table.chip`每个成员**对应一个引脚**，内容记录了**该引脚的GSI号**，其实**该成员已经不用了**。
 
