--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -5,15 +5,16 @@ KVM中断系统逻辑图如下
 
 ![2020-05-03-18-49-41.png](./images/2020-05-03-18-49-41.png)
 
-KVM将**所有类型**的**IRQ CHIP**抽象出**一个接口**，类似于C++的interface抽象基类，定义了
+KVM将**所有类型**的**IRQ CHIP**(**中断芯片**)抽象出**一个接口**，类似于C++的interface抽象基类.
+
+每个**中断芯片**定义了
 
 - **中断的触发方法**: `set()`
 - 以及**每个引脚**和**GSI**的**映射关系**，
 
-这些都是**和芯片类型无关**的，**具体的芯片**都是**继承和实现接口**，**虚拟设备的中断**发送给**IRQ CHIP接口**开始中断的模拟；分别实现了**PIC**、**IOAPIC**以及**MSI**的**set方法**进行，通过**set方法**完成对于**VCPU的中断注入**。
+这些都是**和芯片类型！！！无关**的，**具体的芯片**都是**继承和实现接口**，**虚拟设备的中断**发送给**IRQ CHIP(中断芯片)接口**开始中断的模拟；分别实现了**PIC**、**IOAPIC**以及**MSI**的**set方法**进行，通过**set方法**完成对于**VCPU的中断注入**。
 
 其中**IOAPIC**中对于**每个引脚**，又定义了**PRT**，**IOAPIC**收到中断后根据**RTE格式化**出**中断消息**并发送给**目标LAPIC**，LAPIC完成**中断的选举和注入实现**。
-
 
 # struct kvm_irq_routing_table: 虚拟机的中断路由信息表
 
@@ -35,6 +36,7 @@ struct kvm {
 
 #ifdef CONFIG_HAVE_KVM_IRQ_ROUTING
 struct kvm_irq_routing_table {
+        // 3个芯片, 每个最大24个引脚(ioapic最大)
         int chip[KVM_NR_IRQCHIPS][KVM_IRQCHIP_NUM_PINS];
         u32 nr_rt_entries;
         /*
@@ -47,7 +49,8 @@ struct kvm_irq_routing_table {
 ```
 
 一个`struct kvm`代表一个虚拟机, 
-`irq_routing`指向了**IRQ CHIP抽象接口**的**表**`kvm_irq_routing_table`结构体。`irq_routing`是该**虚拟机的整个中断路由信息表**, 
+`irq_routing`是这个虚拟机所有**IRQ CHIP抽象接口**的**表**。
+`irq_routing`是该**虚拟机的整个中断路由信息表**, 
 
 
 
