--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -36,13 +36,16 @@ struct kvm {
 
 #ifdef CONFIG_HAVE_KVM_IRQ_ROUTING
 struct kvm_irq_routing_table {
-        // 3个芯片, 每个最大24个引脚(ioapic最大)
+        // 引脚数
+        // 3个芯片, 每个最大24个引脚(ioapic最大), 最大72个引脚
         int chip[KVM_NR_IRQCHIPS][KVM_IRQCHIP_NUM_PINS];
         u32 nr_rt_entries;
         /*
          * Array indexed by gsi. Each entry contains list of irq chips
          * the gsi is connected to.
          */
+        // 数组, 下标是gsi号
+        // 数组里面的元素是双链表, 
         struct hlist_head map[0];
 };
 #endif
@@ -52,7 +55,9 @@ struct kvm_irq_routing_table {
 `irq_routing`是这个虚拟机所有**IRQ CHIP抽象接口**的**表**。
 `irq_routing`是该**虚拟机的整个中断路由信息表**, 
 
+`chip`每个成员**对应一个引脚**，内容记录了**该引脚的GSI号**，其实**该成员已经不用了**。
 
+**map**是**以gsi为索引**的**结构体数组**，数组元素是**双链表**，同`struct kvm_kernel_irq_routing_entry`中**link关联**。
 
 # 虚拟中断子系统的关系
 
@@ -60,13 +65,13 @@ struct kvm_irq_routing_table {
 
 ![2020-05-03-19-01-08.png](./images/2020-05-03-19-01-08.png)
 
-`struct kvm_irq_routing_table`是**vm整个**的**中断路由信息**，以**gsi为索引**可以找到**对应的路由项**，即`struct kvm_kernel_irq_routing_entry`。`struct kvm_irq_routing_table`中**map**是**以gsi为索引**的**结构体数组**，数组元素是**双链表**，同`struct kvm_kernel_irq_routing_entry`中**link关联**。
+`struct kvm_irq_routing_table`是**vm整个**的**中断路由信息**，以**gsi为索引**可以找到**对应的路由项**，即`struct kvm_kernel_irq_routing_entry`。
 
 
 
 
 
-`kvm_irq_routing_table.chip`每个成员**对应一个引脚**，内容记录了**该引脚的GSI号**，其实**该成员已经不用了**。
+
 
 `kvm_irq_routing_table.map`成员指向一个**hash桶**，桶上的每个元素**对应一个抽象引脚**，即**每个链对一个IRQ号**，链上的每个元素指向`kvm_kernel_irq_routing_entry`结构体，**每个该结构体**代表了一个**具体芯片**的`set()`方法的实现，在进行**中断注入的时候**，**每种芯片的set方法**都会**被调用**一下，在**guest**中会**忽略没有实现的芯片类型发送的中断消息**(其实这里是可以优化的，必经不需要多次的中断注入，在**QEMU注册中断设备**的时候就**不要注册不需要的中断芯片类型**)
 
@@ -155,3 +160,5 @@ struct kvm_pic {
 https://blog.csdn.net/leoufung/article/details/53081207
 
 https://blog.csdn.net/Mr0cheng/article/details/102578713 (未完)
+
+https://blog.csdn.net/Mr0cheng/article/details/102578713?utm_medium=distribute.pc_relevant.none-task-blog-BlogCommendFromBaidu-1&depth_1-utm_source=distribute.pc_relevant.none-task-blog-BlogCommendFromBaidu-1 (未完)
