--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -16,7 +16,12 @@ KVM将**所有类型**的**IRQ CHIP**(**中断芯片**)抽象出**一个接口**
 
 其中**IOAPIC**中对于**每个引脚**，又定义了**PRT**，**IOAPIC**收到中断后根据**RTE格式化**出**中断消息**并发送给**目标LAPIC**，LAPIC完成**中断的选举和注入实现**。
 
-# struct kvm_irq_routing_table: 虚拟机的中断路由信息表
+# struct kvm_irq_routing_table: 虚拟机的中断路由表
+
+一个`struct kvm`代表一个虚拟机, 
+`irq_routing`是这个**虚拟机所有IRQ CHIP抽象接口**的**表**(汇总)。即表示该**虚拟机的整个中断路由信息表**.
+
+**一个虚拟机**对应**一个中断路由表**.
 
 ```cpp
 struct kvm {
@@ -36,28 +41,33 @@ struct kvm {
 
 #ifdef CONFIG_HAVE_KVM_IRQ_ROUTING
 struct kvm_irq_routing_table {
-        // 引脚数
+        // 每个引脚的GSI, 已不使用
         // 3个芯片, 每个最大24个引脚(ioapic最大), 最大72个引脚
         int chip[KVM_NR_IRQCHIPS][KVM_IRQCHIP_NUM_PINS];
+        // 中断路由项的数目
         u32 nr_rt_entries;
         /*
          * Array indexed by gsi. Each entry contains list of irq chips
          * the gsi is connected to.
          */
-        // 数组, 下标是gsi号
+        // 哈希链表结构体数组, 下标是gsi号
         // 数组里面的元素是双链表, 
         struct hlist_head map[0];
 };
 #endif
 ```
 
-一个`struct kvm`代表一个虚拟机, 
-`irq_routing`是这个虚拟机所有**IRQ CHIP抽象接口**的**表**。
-`irq_routing`是该**虚拟机的整个中断路由信息表**, 
+，最为关键的struct hlist_head map[0]，数组以GSI作为索引可以找到同一个irq关联的所有kvm_kernel_irq_routing_entry（中断路由项）。
 
-`chip`每个成员**对应一个引脚**，内容记录了**该引脚的GSI号**，其实**该成员已经不用了**。
 
-**map**是**以gsi为索引**的**结构体数组**，数组元素是**双链表**，同`struct kvm_kernel_irq_routing_entry`中**link关联**。
+`chip`是个**二维数组**, 表示**三个中断控制器芯片**的**每一个管脚**（最多24个pin）的**GSI**. 每个成员**对应一个引脚**，内容记录了**该引脚的GSI号**，其实**该成员已经不用了**。
+
+`nr_rt_entries`表示**中断路由表**中存放的“**中断路由项**”的**数目**
+
+
+**map**是是一个**哈希链表结构体数组**, **以gsi为索引**的**结构体数组**，数组元素是**双链表**，同`struct kvm_kernel_irq_routing_entry`中**link关联**。
+
+`kvm_irq_routing_table.map`成员指向一个**hash桶**，桶上的每个元素**对应一个抽象引脚**，即**每个链对一个IRQ号**，链上的每个元素指向`kvm_kernel_irq_routing_entry`结构体，**每个该结构体**代表了一个**具体芯片**的`set()`方法的实现，在进行**中断注入的时候**，**每种芯片的set方法**都会**被调用**一下，在**guest**中会**忽略没有实现的芯片类型发送的中断消息**(其实这里是可以优化的，必经不需要多次的中断注入，在**QEMU注册中断设备**的时候就**不要注册不需要的中断芯片类型**)
 
 # 虚拟中断子系统的关系
 
@@ -73,7 +83,6 @@ struct kvm_irq_routing_table {
 
 
 
-`kvm_irq_routing_table.map`成员指向一个**hash桶**，桶上的每个元素**对应一个抽象引脚**，即**每个链对一个IRQ号**，链上的每个元素指向`kvm_kernel_irq_routing_entry`结构体，**每个该结构体**代表了一个**具体芯片**的`set()`方法的实现，在进行**中断注入的时候**，**每种芯片的set方法**都会**被调用**一下，在**guest**中会**忽略没有实现的芯片类型发送的中断消息**(其实这里是可以优化的，必经不需要多次的中断注入，在**QEMU注册中断设备**的时候就**不要注册不需要的中断芯片类型**)
 
  
 
