--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -50,24 +50,29 @@ struct kvm_irq_routing_table {
          * Array indexed by gsi. Each entry contains list of irq chips
          * the gsi is connected to.
          */
-        // 哈希链表结构体数组, 下标是gsi号
-        // 数组里面的元素是双链表, 
+        // 哈希链表结构体数组, 索引是gsi号
+        // 数组里面的元素是哈希链表, 同一个irq关联的所有entry
         struct hlist_head map[0];
 };
 #endif
 ```
 
-，最为关键的struct hlist_head map[0]，数组以GSI作为索引可以找到同一个irq关联的所有kvm_kernel_irq_routing_entry（中断路由项）。
+，最为关键的struct hlist_head map[0]，
 
 
 `chip`是个**二维数组**, 表示**三个中断控制器芯片**的**每一个管脚**（最多24个pin）的**GSI**. 每个成员**对应一个引脚**，内容记录了**该引脚的GSI号**，其实**该成员已经不用了**。
 
 `nr_rt_entries`表示**中断路由表**中存放的“**中断路由项**”的**数目**
 
+**map**是一个**哈希链表结构体数组**, **以GSI为索引**的**结构体数组**，数组元素是**双链表**，同`struct kvm_kernel_irq_routing_entry`中**link关联**。数组**以GSI作为索引**可以找到**同一个irq**关联的所有`kvm_kernel_irq_routing_entry`（中断路由项）。
 
-**map**是是一个**哈希链表结构体数组**, **以gsi为索引**的**结构体数组**，数组元素是**双链表**，同`struct kvm_kernel_irq_routing_entry`中**link关联**。
+`map`成员指向一个**hash桶**，桶上的每个元素**对应一个抽象引脚**，即**每个链表对一个IRQ号**，链表上的每个元素指向`kvm_kernel_irq_routing_entry`结构体，**每个该结构体**代表了一个**具体芯片**的`set()`方法的实现，在进行**中断注入的时候**，**每种芯片的set方法**都会**被调用**一下，在**guest**中会**忽略没有实现的芯片类型发送的中断消息**(其实这里是可以优化的，必经不需要多次的中断注入，在**QEMU注册中断设备**的时候就**不要注册不需要的中断芯片类型**)
 
-`kvm_irq_routing_table.map`成员指向一个**hash桶**，桶上的每个元素**对应一个抽象引脚**，即**每个链对一个IRQ号**，链上的每个元素指向`kvm_kernel_irq_routing_entry`结构体，**每个该结构体**代表了一个**具体芯片**的`set()`方法的实现，在进行**中断注入的时候**，**每种芯片的set方法**都会**被调用**一下，在**guest**中会**忽略没有实现的芯片类型发送的中断消息**(其实这里是可以优化的，必经不需要多次的中断注入，在**QEMU注册中断设备**的时候就**不要注册不需要的中断芯片类型**)
+所以以**gsi为索引**可以找到**对应的路由项**，即`struct kvm_kernel_irq_routing_entry`。
+
+`kvm_kernel_irq_routing_entry`结构体**对应具体芯片的一个引脚**，按照芯片类型实现`kvm_kernel_irq_routing_entry.set`接口，`kvm_kernel_irq_routing_entry.chip`成员记录了该结构体对应的具体是哪种芯片的那个引脚，`kvm_kernel_irq_routing_entry.gsi`记录了该引脚的gsi号。
+
+
 
 # 虚拟中断子系统的关系
 
@@ -75,18 +80,6 @@ struct kvm_irq_routing_table {
 
 ![2020-05-03-19-01-08.png](./images/2020-05-03-19-01-08.png)
 
-`struct kvm_irq_routing_table`是**vm整个**的**中断路由信息**，以**gsi为索引**可以找到**对应的路由项**，即`struct kvm_kernel_irq_routing_entry`。
-
-
-
-
-
-
-
-
- 
-
-`kvm_kernel_irq_routing_entry`结构体**对应具体芯片的一个引脚**，按照芯片类型实现`kvm_kernel_irq_routing_entry.set`接口，`kvm_kernel_irq_routing_entry.chip`成员记录了该结构体对应的具体是哪种芯片的那个引脚，`kvm_kernel_irq_routing_entry.gsi`记录了该引脚的gsi号。
 
  
 
