--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -93,7 +93,16 @@ PIC有三个重要的寄存器:
 
 ## 6.1. QEMU
 
+qemu代码中中断控制器的kvm内核初始化流程为：
+
 ```cpp
+configure_accelerator
+    |--> accel_init_machine
+        |--> kvm_init
+            |--> kvm_irqchip_create
+                |--> kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP)
+                |--> kvm_init_irq_routing
+
 // kvm-all.c/kvm_init/kvm_irqchip_create
 kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP)
 ```
