--- Auto-Git Commit ---

--- a/Virtualization/QEMU/5. IO虚拟化/4. Interrupt/2. 中断控制器.md
+++ b/Virtualization/QEMU/5. IO虚拟化/4. Interrupt/2. 中断控制器.md
@@ -12,3 +12,5 @@ configure_accelerator
 
 qemu通过kvm的ioctl命令`KVM_CREATE_IRQCHIP`调用到kvm内核模块中，在内核模块中创建和初始化PIC/IOAPIC设备（创建设备对应的数据结构并将设备注册到总线上）。
 
+qemu在kvm内核中创建完成PIC和IOAPIC后将全局变量kvm_kernel_irqchip置为true，kvm模块则将kvm->arch.irqchip_mode 赋值为 KVM_IRQCHIP_KERNEL，这样后面的kvm_irqchip_in_kernel返回true表示pic芯片放到kvm内核模块中实现,kvm_ioapic_in_kernel也返回true表示ioapic放到kvm中来模拟。
+
