--- Auto-Git Commit ---

--- a/Virtualization/QEMU/5. IO虚拟化/4. Interrupt/2. 中断控制器.md
+++ b/Virtualization/QEMU/5. IO虚拟化/4. Interrupt/2. 中断控制器.md
@@ -12,5 +12,14 @@ configure_accelerator
 
 qemu通过kvm的ioctl命令`KVM_CREATE_IRQCHIP`调用到kvm内核模块中，在内核模块中创建和初始化PIC/IOAPIC设备（创建设备对应的数据结构并将设备注册到总线上）。
 
-qemu在kvm内核中创建完成PIC和IOAPIC后将全局变量kvm_kernel_irqchip置为true，kvm模块则将kvm->arch.irqchip_mode 赋值为 KVM_IRQCHIP_KERNEL，这样后面的kvm_irqchip_in_kernel返回true表示pic芯片放到kvm内核模块中实现,kvm_ioapic_in_kernel也返回true表示ioapic放到kvm中来模拟。
+```cpp
+kvm_arch_vm_ioctl(s, KVM_CREATE_IRQCHIP)
+    |--> kvm_pic_init                    /* i8259 初始化 */
+    |--> kvm_ioapic_init                 /* ioapic 初始化 */
+    |--> kvm_setup_default_irq_routing   /* 初始化缺省的IRE */
+```
+这一步详见KVM
+
+qemu在kvm内核中创建完成PIC和IOAPIC后将全局变量`kvm_kernel_irqchip`置为**true**，kvm模块则将`kvm->arch.irqchip_mode` 赋值为 `KVM_IRQCHIP_KERNEL`，这样后面的`kvm_irqchip_in_kernel`返回true表示**pic芯片**放到**kvm内核模块**中实现, `kvm_ioapic_in_kernel`也返回true表示ioapic放到kvm中来模拟。
+
 
