--- a/Virtualization/QEMU/5. IO虚拟化/4. Interrupt/2. 中断控制器.md
+++ b/Virtualization/QEMU/5. IO虚拟化/4. Interrupt/2. 中断控制器.md
@@ -1,4 +1,12 @@
 
+中断虚拟化的关键在于对中断控制器的模拟，我们知道x86上中断控制器主要有旧的中断控制器PIC(intel 8259a)和适应于SMP框架的IOAPIC/LAPIC两种。
+
+# 中断控制器的创建和初始化
+
+考虑到中断实时性对性能的影响，PIC和IOAPIC的设备模拟主要逻辑都放到了kvm模块进行实现，每个VCPU的LAPIC则完全放到kvm中进行实现。 i8259控制器和IOAPIC的创建和初始化由qemu和kvm配合完成，包括了kvm中设备相关数据结构初始化和qemu中设备模拟的初始化2个方面：
+
+## 中断控制器的创建
+
 qemu代码中中断控制器的kvm内核初始化流程为：
 
 ```cpp
@@ -18,8 +26,11 @@ kvm_arch_vm_ioctl(s, KVM_CREATE_IRQCHIP)
     |--> kvm_ioapic_init                 /* ioapic 初始化 */
     |--> kvm_setup_default_irq_routing   /* 初始化缺省的IRE */
 ```
+
 这一步详见KVM
 
 qemu在kvm内核中创建完成PIC和IOAPIC后将全局变量`kvm_kernel_irqchip`置为**true**，kvm模块则将`kvm->arch.irqchip_mode` 赋值为 `KVM_IRQCHIP_KERNEL`，这样后面的`kvm_irqchip_in_kernel`返回true表示**pic芯片**放到**kvm内核模块**中实现, `kvm_ioapic_in_kernel`也返回true表示ioapic放到kvm中来模拟。
 
+**中断处理的逻辑**放在**kvm内核模块**中进行实现，但**设备的模拟**呈现还是需要**qemu设备模拟器**来搞定，最后qemu和kvm一起配合完成快速中断处理的流程。
 
+i8259的设备创建流程(pic还是传统的isa设备，中断是边沿触发的，master的i/o port为0x20,0x21 slave的i/o port为0xa0,0xa1)：
