--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/0. 硬件基础.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/0. 硬件基础.md
@@ -15,7 +15,7 @@
 
 # 1. 硬件基础
 
-简单介绍点硬件知识，方便后面的讲解
+**中断虚拟化**的关键在于**对中断控制器的模拟**，我们知道x86上中断控制器主要有**旧的中断控制器**PIC(intel 8259a)和适应于SMP框架的IOAPIC/LAPIC两种。
 
 ## 1.1. PIC: 8259A
 
