--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/1. 基本原理.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/1. 基本原理.md
@@ -2,6 +2,12 @@
 
 <!-- code_chunk_output -->
 
+- [中断组成](#中断组成)
+- [中断的模拟](#中断的模拟)
+  - [中断源模拟](#中断源模拟)
+  - [虚拟机响应虚拟中断](#虚拟机响应虚拟中断)
+    - [中断退出](#中断退出)
+    - [中断注入](#中断注入)
 - [1. 中断虚拟化](#1-中断虚拟化)
 - [2. 物理中断](#2-物理中断)
   - [2.1. vcpu运行时的截获和注入](#21-vcpu运行时的截获和注入)
@@ -9,6 +15,8 @@
 - [4. 参考](#4-参考)
 
 <!-- /code_chunk_output -->
+
+# 中断组成
 
 中断从宏观上看可以分为软件部分和硬件部分。
 
@@ -20,21 +28,26 @@
 
 中断硬件部分就是**产生中断脉冲**，**传给中断控制器**，然后**通知CPU**，CPU在执行**下条指令前**会去**查询中断情况**，如果有中断信号，就执行中断。我们在这里模拟的就是硬件部分内容。
 
+# 中断的模拟
+
 因此中断的模拟按照我的理解可以分为两个主要部分，一个是**中断源的模拟**，一个是**给虚拟机的VCPU响应中断**。
 
-中断源模拟：
+## 中断源模拟
 
 中断源模拟我也不是很清楚，方法很多，可以直接响应Linux的驱动，也可以别的，比如时钟中断可以设置一个定时器，定时器到了就触发中断，但是键盘，鼠标，硬盘呢？这个等待高手回？欢迎大家来讨论。
 
-虚拟机响应虚拟中断：
+## 虚拟机响应虚拟中断
 
-KVM中断虚拟化主要依赖于`VT-x`技术，VT-x主要提供了**两种中断事件机制**，分别是**中断退出**和**中断注入**。
+KVM中断虚拟化主要依赖于`VT-x`技术，VT-x主要提供了**两种中断事件机制**，分别是
 
-中断退出
+- **中断退出**
+- **中断注入**
 
-是指虚拟机发生中断时，主动使得客户机发生`VM-exit`，这样能够在主机中实现**对客户机中断的注入**。
+### 中断退出
 
-中断注入
+是指**虚拟机发生中断时**，主动使得客户机发生`VM-exit`，这样能够在主机中实现**对客户机中断的注入**。
+
+### 中断注入
 
 它是指**将中断写入VMCS对应的中断信息位**，来实现中断的注入，当中断完成后通过读取中断的返回信息来分析中断是否正确。这个也是这里要详细讲的地方。
 
