--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/0. 硬件基础.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/0. 硬件基础.md
@@ -48,7 +48,7 @@ LAPIC接受到中断消息后，提取其中的VECTOR并设置IRR后，进行中
 
 GSI 是ACPI 引入的概念，全称是Global System Interrupt。它为系统中**每个中断源**指定一个**唯一的中断号**。
 
-如果GSI base 为0，每个管脚的GSI=GSI base + pin，**15以上的GSI号和IRQ值相等**，但是`[0~15]`是**按照规范映射**的，其实试试GSI 2映射到了IRQ 0上了，在KVM中引脚号就是IRQ号。
+如果GSI base 为0，**每个管脚**的·，**15以上的GSI号和IRQ值相等**，但是`[0~15]`是**按照规范映射！！！** 的，其实是GSI 2映射到了IRQ 0上了，在**KVM**中**引脚号就是IRQ号**。
 
 中断和异常会打断顺序执行的程序流, 转而进入一条完全不同的执行路径.
 
