--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -57,10 +57,7 @@ struct kvm_irq_routing_table {
 #endif
 ```
 
-，最为关键的struct hlist_head map[0]，
-
-
-`chip`是个**二维数组**, 表示**三个中断控制器芯片**的**每一个管脚**（最多24个pin）的**GSI**. 每个成员**对应一个引脚**，内容记录了**该引脚的GSI号**，其实**该成员已经不用了**。
+`chip`是个**二维数组**, 表示**三个中断控制器芯片**的**每一个管脚**（最多24个pin）. 每个成员**对应一个引脚**，内容记录了**该引脚的GSI号**，其实**该成员已经不用了**。
 
 `nr_rt_entries`表示**中断路由表**中存放的“**中断路由项**”的**数目**
 
