--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -61,13 +61,51 @@ struct kvm_irq_routing_table {
 
 `nr_rt_entries`表示**中断路由表**中存放的“**中断路由项**”的**数目**
 
-**map**是一个**哈希链表结构体数组**, 也就是说可以将map理解为链表头数组, 即每个元素都是一个链表头. **以GSI为索引**的**结构体数组**，数组元素是**双链表**，同`struct kvm_kernel_irq_routing_entry`中**link关联**。数组**以GSI作为索引**可以找到**同一个irq**关联的所有`kvm_kernel_irq_routing_entry`（中断路由项）。
+**map**是一个**哈希链表结构体数组**, 也就是说可以将map理解为**链表头数组**, 即**每个元素**都是**一个链表头**. 链表**以GSI为索引**的**结构体数组**，数组元素是**双链表**，同`struct kvm_kernel_irq_routing_entry`中**link关联**。
+
+该数组**以GSI作为索引**可以找到**同一个irq**关联的所有`kvm_kernel_irq_routing_entry`（中断路由项）, 即这个链表头。
 
 `map`成员指向一个**hash桶**，桶上的每个元素**对应一个抽象引脚**，即**每个链表对一个IRQ号**，链表上的每个元素指向`kvm_kernel_irq_routing_entry`结构体，**每个该结构体**代表了一个**具体芯片**的`set()`方法的实现，在进行**中断注入的时候**，**每种芯片的set方法**都会**被调用**一下，在**guest**中会**忽略没有实现的芯片类型发送的中断消息**(其实这里是可以优化的，必经不需要多次的中断注入，在**QEMU注册中断设备**的时候就**不要注册不需要的中断芯片类型**)
 
-所以以**gsi为索引**可以找到**对应的路由项**，即`struct kvm_kernel_irq_routing_entry`。
+# kvm_kernel_irq_routing_entry: 中断路由项
 
-`kvm_kernel_irq_routing_entry`结构体**对应具体芯片的一个引脚**，按照芯片类型实现`kvm_kernel_irq_routing_entry.set`接口，`kvm_kernel_irq_routing_entry.chip`成员记录了该结构体对应的具体是哪种芯片的那个引脚，`kvm_kernel_irq_routing_entry.gsi`记录了该引脚的gsi号。
+`kvm_kernel_irq_routing_entry`结构体**对应具体芯片的一个引脚**，按照**芯片类型**实现`kvm_kernel_irq_routing_entry.set`接口，`kvm_kernel_irq_routing_entry.chip`成员记录了该结构体对应的具体是哪种芯片的那个引脚，`kvm_kernel_irq_routing_entry.gsi`记录了该引脚的gsi号。
+
+```cpp
+struct kvm_kernel_irq_routing_entry {
+        // 该entry对应的GSI号
+        u32 gsi;
+        u32 type;
+        // 该GSI关联的触发方式
+        int (*set)(struct kvm_kernel_irq_routing_entry *e,
+                   struct kvm *kvm, int irq_source_id, int level,
+                   bool line_status);
+        union {
+                struct {
+                        unsigned irqchip;
+                        unsigned pin;
+                } irqchip;
+                struct {
+                        u32 address_lo;
+                        u32 address_hi;
+                        u32 data;
+                        u32 flags;
+                        u32 devid;
+                } msi;
+                struct kvm_s390_adapter_int adapter;
+                struct kvm_hv_sint hv_sint;
+        };
+        // 
+        struct hlist_node link;
+};
+```
+
+GSI是该entry对应的**GSI号**，一般和IRQ是一样，
+
+set方法是该IRQ关联的触发方法，通过该方法把**IRQ传递给IO-APIC**，；
+
+link就是**连接点**，连接在上面**同一IRQ**对应的**map**上；
+
 
 
 
