--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -63,13 +63,14 @@ struct kvm_irq_routing_table {
 
 **map**是一个**哈希链表结构体数组**, 也就是说可以将map理解为**链表头数组**, 即**每个元素**都是**一个链表头**. 链表中每个项都是`kvm_kernel_irq_routing_entry`, 链表的所有项是通过`kvm_kernel_irq_routing_entry`中的`link`关联起来.
 
-**以GSI作为索引**这个map数组, 可以找到**同一个irq**关联的所有（中断路由项）, 即这个链表头。也就是说每个链表对应一个IRQ号.
+**以GSI作为索引**这个map数组, 可以找到**同一个irq**关联的所有（中断路由项）, 即这个链表头。也就是说**每个链表**对应**一个IRQ号**.
 
-`map`成员指向一个**hash桶**，桶上的每个元素**对应一个抽象引脚**，即**每个链表对一个IRQ号**，链表上的每个元素指向`kvm_kernel_irq_routing_entry`结构体，**每个该结构体**代表了一个**具体芯片**的`set()`方法的实现，在进行**中断注入的时候**，**每种芯片的set方法**都会**被调用**一下，在**guest**中会**忽略没有实现的芯片类型发送的中断消息**(其实这里是可以优化的，必经不需要多次的中断注入，在**QEMU注册中断设备**的时候就**不要注册不需要的中断芯片类型**)
+
+**每个该结构体**代表了一个**具体芯片**的`set()`方法的实现，在进行**中断注入的时候**，**每种芯片的set方法**都会**被调用**一下，在**guest**中会**忽略没有实现的芯片类型发送的中断消息**(其实这里是可以优化的，必经不需要多次的中断注入，在**QEMU注册中断设备**的时候就**不要注册不需要的中断芯片类型**)
 
 # kvm_kernel_irq_routing_entry: 中断路由项
 
-`kvm_kernel_irq_routing_entry`结构体**对应具体芯片的一个引脚**，按照**芯片类型**实现`kvm_kernel_irq_routing_entry.set`接口，`kvm_kernel_irq_routing_entry.chip`成员记录了该结构体对应的具体是哪种芯片的那个引脚，`kvm_kernel_irq_routing_entry.gsi`记录了该引脚的gsi号。
+`kvm_kernel_irq_routing_entry`结构体**对应具体芯片的一个引脚**
 
 ```cpp
 struct kvm_kernel_irq_routing_entry {
@@ -100,9 +101,9 @@ struct kvm_kernel_irq_routing_entry {
 };
 ```
 
-GSI是该entry对应的**GSI号**，一般和IRQ是一样，
+GSI是该entry对应的**GSI号**，一般**和IRQ是一样**，
 
-set方法是该IRQ关联的触发方法，通过该方法把**IRQ传递给IO-APIC**，；
+set方法是该IRQ关联的触发方法，通过该方法把**IRQ传递给IO-APIC**；按照**芯片类型**实现路由项中的`set`接口，
 
 link就是**连接点**，连接在上面**同一IRQ**对应的**map**上；
 
