--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -3,6 +3,7 @@
 
 <!-- code_chunk_output -->
 
+- [基本原理](#基本原理)
 - [1. Time Tick](#1-time-tick)
   - [1.1. 虚拟化下的timer](#11-虚拟化下的timer)
 - [2. 相关代码](#2-相关代码)
@@ -19,10 +20,14 @@
     - [6.4.2. 三种设备在虚拟bus上的结构](#642-三种设备在虚拟bus上的结构)
   - [6.5. kvm_ioapic_init(): ioapic的初始化](#65-kvm_ioapic_init-ioapic的初始化)
   - [6.6. kvm_setup_default_irq_routing(): 默认中断路由表的初始化](#66-kvm_setup_default_irq_routing-默认中断路由表的初始化)
-- [虚拟PIT的创建](#虚拟pit的创建)
+- [初始化虚拟PIT](#初始化虚拟pit)
   - [QEMU](#qemu)
 
 <!-- /code_chunk_output -->
+
+# 基本原理
+
+中断虚拟化**起始关键**在于**对中断控制器的虚拟化**，中断控制器目前主要有**APIC**，这种架构下**设备控制器**通过**某种触发方式**通知**IO APIC**，**IO APIC**根据**自身维护**的**重定向表pci irq routing table**格式化出**一条中断消息**，把中断消息发送给**local APIC**，local APIC局部于CPU，即**每个CPU一个**，local APIC 具备**传统中断控制器的相关功能**以及各个寄存器，中断请求寄存器IRR，中断屏蔽寄存器IMR，中断服务寄存器ISR等，针对这些关键部件的虚拟化是中断虚拟化的重点。
 
 # 1. Time Tick
 
@@ -527,7 +532,7 @@ static int setup_routing_entry(struct kvm *kvm,
 
 之前的初始化过程我们已经看见了，`.type`为`KVM_IRQ_ROUTING_IRQCHIP`，所以这里实际上就是把`e->gsi = ue->gsi;e->type = ue->type;`然后调用了`kvm_set_routing_entry`，该函数中主要是设置了`kvm_kernel_irq_routing_entry`中的**set函数**，**APIC**的话设置的是`kvm_set_ioapic_irq`函数，而**pic**的话设置`kvm_set_pic_irq`函数，然后设置**irqchip的类型**和**管脚**，对于**IOAPIC**也是直接复制过来，PIC由于**管脚计算**是`irq%8`，所以这里需要**加上8的偏移**。之后**设置table的chip为gis号**。回到`setup_routing_entry`函数中，就把`kvm_kernel_irq_routing_entry`**以gsi号位索引**，加入到了**map数组**中对应的**双链表**中。再回到`kvm_set_irq_routing`函数中，接下来就是**更新kvm结构**中的`irq_routing`指针了。
 
-# 虚拟PIT的创建
+# 初始化虚拟PIT
 
 ## QEMU
 
